Removendo arquivos do template padrao. Incluindo acesso a banco de dados com DataService Controllers alterados para consumir direto do Data Service

--- a/LojaEcommerce/appsettings.json
+++ b/LojaEcommerce/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionString": {
+    "Default": "server=localhost;port=3306;database=lojaEcommerce;uid=root;password=admin"
   }
 }
